--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="box box-2">
+        <div class="s-box">
+            <p id="p1" class="p-box">Chicken</p>
+            <p class="text-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, nostrum error. Obcaecati animi quam possimus alias maxime. Rem nobis dolorum fuga at iste similique mollitia officia cumque, alias, temporibus aliquam!</p>
+        </div>
+    </div>
+    <div class="box box-2">
+        <div class="s-box">
+            <p id="p2" class="p-box">Beef</p>
+            <p class="text-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, nostrum error. Obcaecati animi quam possimus alias maxime. Rem nobis dolorum fuga at iste similique mollitia officia cumque, alias, temporibus aliquam!</p>
+        </div>
+    </div>
+    <div class="box box-3">
+        <div class="s-box">
+            <p id="p3" class="p-box">Sushi</p>
+            <p class="text-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, nostrum error. Obcaecati animi quam possimus alias maxime. Rem nobis dolorum fuga at iste similique mollitia officia cumque, alias, temporibus aliquam!</p>
+        </div>
+    </div>
+</body>
+</html>
